tests/snapshots/compile__wgsl_convert_reframerange_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_rgba8_a: f32,
    u_control_rgba8_b: f32,
    u_control_rgba8_g: f32,
    u_control_vignette3_radius: f32,
    u_control_vignette3_softness: f32,
    u_control_vignette4_radius: f32,
    u_control_vignette4_softness: f32,
    u_control_vignette5_radius: f32,
    u_control_vignette5_softness: f32,
    u_control_vignette6_radius: f32,
    u_control_vignette6_softness: f32,
    u_control_vignette7_radius: f32,
    u_control_vignette7_softness: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn vignette3_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette3_radius;
    let softness = max(u.u_control_vignette3_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette4_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette4_radius;
    let softness = max(u.u_control_vignette4_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette5_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette5_radius;
    let softness = max(u.u_control_vignette5_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette6_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette6_radius;
    let softness = max(u.u_control_vignette6_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette7_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette7_radius;
    let softness = max(u.u_control_vignette7_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn reframerange1_output(uv: vec2f) -> f32 {
    let inMin = vignette4_mask(uv);
    let outMin = vignette6_mask(uv);
    let outMax = vignette7_mask(uv);
    let inRange = (vignette5_mask(uv)) - inMin;
    if (abs(inRange) < 1e-5) { return outMin; }
    let mapped = mix(outMin, outMax, ((vignette3_mask(uv)) - inMin) / inRange);
    return mapped;
}

fn rgba8_output(uv: vec2f) -> vec4f {
    return premultiply(vec4f(reframerange1_output(uv), u.u_control_rgba8_g, u.u_control_rgba8_b, u.u_control_rgba8_a));
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return rgba8_output(uv);
}
