tests/snapshots/compile__wgsl_convert_saturation_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_rgba3_a: f32,
    u_control_rgba3_b: f32,
    u_control_rgba3_g: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn saturation1_output(uv: vec2f) -> f32 {
    let color = unpremultiply(defaultUvMap(uv));
    let maxc = max(max(color.r, color.g), color.b);
    let minc = min(min(color.r, color.g), color.b);
    let delta = maxc - minc;
    return select(delta / max(1.0 - abs(maxc + minc - 1.0), 1e-6), 0.0, delta <= 0.0);
}

fn rgba3_output(uv: vec2f) -> vec4f {
    return premultiply(vec4f(saturation1_output(uv), u.u_control_rgba3_g, u.u_control_rgba3_b, u.u_control_rgba3_a));
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return rgba3_output(uv);
}
